[package]
name = "idchoppers"
version = "0.1.0"
authors = ["Eevee (Lexy Munroe) <eevee.git@veekun.com>"]

[dependencies]
bitflags = "^1.0"
byteorder = "^1.0"
error-chain = "0.10.0"
euclid = "^0.16"
typed-arena = "^1.3"
bit-vec = "^0.4"
# TODO uhh how do i separate the binary deps from the library deps?
termcolor = "^0.3"
svg = "^0.5"
clap = "2"

[dependencies.nom]
version = "^2.1"
features = ["verbose-errors"]
