[package]
name = "idchoppers"
version = "0.1.0"
authors = ["Eevee (Lexy Munroe) <eevee.git@veekun.com>"]

[workspace]
members = [ ".", "programs" ]

[dependencies]
bit-vec = "^0.4"
bitflags = "^1.0"
byteorder = "^1.0"
error-chain = "0.10.0"
euclid = "^0.16"
memmap = "0.6.2"
svg = "^0.5"
typed-arena = "^1.3"

[dependencies.nom]
version = "^2.1"
features = ["verbose-errors"]

[lib]
name = "idchoppers"

[profile.release]
lto = true
